[package]
name = "cacia"
version = "0.1.0"
edition = "2021"
description = "Cacia (CC) cryptocurrency node"
license = "MIT"
repository = "https://github.com/Zone-crypto-ZNE/CaciaCC"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
warp = "0.3"
ed25519-dalek = { version = "1.0", features = ["std"] }

[dev-dependencies]
pretty_assertions = "1"
