[package]
name = "cacia"
version = "0.1.0"
edition = "2021"
description = "Cacia (CC) cryptocurrency node"
license = "MIT"
repository = "https://github.com/Zone-crypto-ZNE/CaciaCC"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
clap = "3"  # For command-line argument parsing
ed25519-dalek = "1.0"  # For keypair generation
