[package]
name = "cacia"
version = "0.1.0"
edition = "2021"
description = "Cacia (CC) cryptocurrency node"
license = "MIT"
repository = "https://github.com/Zone-crypto-ZNE/CaciaCC"

[dependencies]
druid = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = "1.0"
clap = "4.0"

# Networking & API
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio-tungstenite = "0.15"

# Database (Optional for blockchain storage)
rusqlite = "0.26"
sled = "0.34"

# Cryptography
blake2 = "0.9"
bip39 = "1.0"

# Logging and Error Handling
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
thiserror = "1.0"

# Unit Testing
mockito = "0.31"
tokio-test = "1.0"

[[bin]]
name = "lat"
path = "src/lat.rs"
